# webhallen.py

./: README.md  pyproject.toml  webhallen.http
tests/: 370861.json  test_client.py
webhallen/: __init__.py  client.py  exceptions.py
